2020-07-22 Jan Kotanski <jan.kotanski@desy.de>
	* improve fetching units from nexus files
	* add tests for NXSLastImage parameter
	* tagged as 2.43.8

2020-07-14 Jan Kotanski <jan.kotanski@desy.de>
	* fix zmq alias name
	* allow host:port/topic syntax in the zmq configuration
	* fix fetching security stream port for py3
	* add tests for tango attribute image source
	* add tests for ZMQ stream image source
	* tagged as 2.43.7

2020-07-01 Jan Kotanski <jan.kotanski@desy.de>
	* fix for 1/energy when energy is 0
	* tagged as 2.43.6

2020-07-01 Jan Kotanski <jan.kotanski@desy.de>
	* synchronize  detector settings with pyFAI.AI
	* tagged as 2.43.5

2020-06-26 Jan Kotanski <jan.kotanski@desy.de>
	* add ToolResults support for QROIProj tool
	* add ToolResults support for Intensity and RGBIntensity tools
	* fix for finding diffractogram range for full azimuth angle
	* tagged as 2.43.4

2020-06-25 Jan Kotanski <jan.kotanski@desy.de>
	* fix integaration range for r_ units with tilt
	* add ToolResults support for OneDPLot
	* add ToolResults support for Maxima
	* tagged as 2.43.3

2020-06-24 Jan Kotanski <jan.kotanski@desy.de>
	* fix double-increase of diffractogram number
	* tagged as 2.43.2

2020-06-24 Jan Kotanski <jan.kotanski@desy.de>
	* add ranges to Diffractogram ToolResults
	* add ToolResults support for Projections
	* add ToolResults support for LineCut
	* tagged as 2.43.1

2020-06-22 Jan Kotanski <jan.kotanski@desy.de>
	* add LavueController.ToolResults
	* add peak finder for diffractogram
	* tagged as 2.43.0

2020-06-19 Jan Kotanski <jan.kotanski@desy.de>
	* update widgets in the config dialog
	* add diffractogram to command line tools
	* tagged as 2.42.3

2020-06-18 Jan Kotanski <jan.kotanski@desy.de>
	* set maximal radial range
	* tagged as 2.42.2

2020-06-18 Jan Kotanski <jan.kotanski@desy.de>
	* add r [pixel] unit to diffractogram tool
	* add setting of colors to the diffractogram tool
	* tagged as 2.42.1

2020-06-16 Jan Kotanski <jan.kotanski@desy.de>